[project]
name = "dnadiffusion"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["dnadiffusion/*", "data/*"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-include = ["*.ipynb"]
select = ["E", "F", "I"]
ignore = ["E721", "E731", "E741", "E742", "E743"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
